Make URLLoaderFactoryGetter available w/o Network Service

This CL makes |StoragePartitionImpl::url_loader_factory_getter_|
available even when Network Service is disable, such that
|StoragePartitionImpl::GetURLLoaderFactoryForBrowserProcessIOThread()|
can be used in all cases.

Note that |URLLoaderFactoryGetter::GetBlobFactory()| is only available
when the network service or servicified service worker is enabled.

This CL also affects some functional unrelated tests, which are tracked
as TODOs and will be addressed in followup CLs.

Bug: 826869
Change-Id: If408dc20f5e4564a5865c93a4c66316d5682d9e2
Reviewed-on: https://chromium-review.googlesource.com/1033728
Commit-Queue: Chong Zhang <chongz@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Reviewed-by: Matt Menke <mmenke@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555984}
Former-commit-id: ace7816eca05aff544532af9a43cccfdd388f46c